spring-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-deployment
  labels:
    app: petclinic
spec:
  replicas: 3
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        imagePullPolicy: Always
        image: jasonmorgan/pbpetclinic:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "400Mi"
            cpu: "100m"
          limits:
            memory: "600Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 6
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 6
---
apiVersion: v1
kind: Service
metadata:
  name: pb-frontend
spec:
  selector:
    app: petclinic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
