spring-ingress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-deployment
  labels:
    app: petclinic
spec:
  replicas: 3
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        imagePullPolicy: Always
        image: jasonmorgan/pbpetclinic:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: pb-frontend
spec:
  selector:
    app: petclinic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-petclinic
spec:
  rules:
  - host: petclinic.run.haas-233.pez.pivotal.io
    http:
      paths:
      - path: 
        backend:
          serviceName: pb-frontend
          servicePort: 80
